# Booter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  app.py  config.py  debug_app.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  run_server.py  simple_server.py  test_server.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.md  plan.md
.github/workflows/: ci.yml
data/: vm_data.json
services/: connection_manager.py  pc_controller.py  pc_controller_old.py  port_scanner.py  proxmox_service.py  ssh_service.py  vm_controller.py  wol_service.py
static/: manifest.json  service-worker.js
static/css/: style.css
static/js/: main-controller.js  main.js  pc-manager.js  ui-manager.js  vm-manager.js  websocket-manager.js
templates/: index.html  offline.html
tests/: test_app.py
