[project]
name = "wol-python"
version = "0.1.0"
description = "Wake-on-LAN dual-boot PC control web service"
readme = "README.md"
requires-python = ">=3.11.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "paramiko>=3.3.0",
    "websockets>=11.0.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
    "pydantic>=2.0.0"
]
