[project]
name = "wol-python"
version = "0.1.0"
description = "Wake-on-LAN dual-boot PC control web service"
readme = "README.md"
requires-python = ">=3.11.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "paramiko>=3.3.0",
    "websockets>=11.0.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "black",
    "flake8",
    "isort",
    "flake8-pyproject",
]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
